syntax = "proto3";
option java_multiple_files = true;

package dk.via.slaughterhouse;

message AnimalData {
  string registrationId = 1;
  double weight = 2;
}

message AnimalId {
  string registrationId = 1;
}

message AnimalsData {
  repeated AnimalData animals = 1;
}

message EmptyMessage {}

message AnimalPartData {
  string animalPartId = 1;
  string partTypeId = 2;
  string partWeight = 3;
  string animalId = 4;
}

message PartTypeId {
  string partTypeId = 1;
}

message PartTypeData {
  string partTypeId = 1;
  string partDesc = 2;
}

message AnimalPartId {
  string animalPartId = 1;
}

message AnimalPartsData {
  repeated AnimalPartData animalParts = 1;
}

message TrayData {
  string trayId = 1;
  string partType = 2;
  double maxWeight = 3;
  repeated AnimalPartData animalPartsData = 4;
}

message ProductData {
  string productId = 1;
  repeated TrayData traysData = 2;
  repeated AnimalPartData animalPartsData = 3;
}

message ProductId {
  string productId = 1;
}

message ProductsData {
  repeated ProductData products = 1;
}

service AnimalLookUpService {
  rpc GetAnimalsFromProductId (ProductId) returns (AnimalsData);
  rpc GetProductFromAnimalId (AnimalId) returns (ProductsData);
}

service AnimalRegistrationService {
  rpc RegisterAnimal (AnimalData) returns (AnimalData);
}
